# SlideShow

diapositive/: CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  MyFrame.cpp  MyFrame.h  Observer.h  Subject.h  main.cpp  resources.h
diapositive/MyTest/: CMakeLists.txt  ImageLoaderTest.cpp
